# khicas

./: Makefile  README.md
.github/workflows/: build.yml
src/: giac_src_kdisplay.patch  main.cpp
src/giac/: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  config.h.in  config.status  configure  configure.ac  giac.specs  giac.specs32  libtool  mkdebian  mkdebian32  mkosx10  win  xcas.metainfo.xml  xcas.nsi  xcas64.nsi  xcaswin.nsi
src/giac/check/: Makefile.am  Makefile.in  Rkat10  Rkat11  Rkat9  TP00-sol.cas  TP00-sol.cas.out1  TP00-sol.cas.out2  TP00-sol.cas.out3  TP03.tst  TP06-sol.cas.out1  TP07-sol.cas.out1  TP08.tst  TP09.tst  TP11.tst  TP12.tst  TP13.tst  TP14.tst  TP18.tst  TP19-sol.cas  TP19.tst  TP21-sol.cas.out1  chk_intinda  chk_intindbo  chk_intindbr  chk_intindc  chk_intindh  chk_intindj  chk_intindm  chk_intinds  chk_intindt  chk_intindw  geo.out  integrate.out  integrate.tst  intinda  intinda.out  intindbo  intindbo.out  intindbr  (+21 more)
src/giac/debian/: Makefile.in  changelog  control  rules
src/giac/debianold/: Makefile.in  changelog  control
src/giac/doc/: Makefile.am  Makefile.in  codemirror.css  epsilon.dfu  giac.tex  giacfr.tex  giacsimple.js  giactableau.js  index.html  khicasnw.html  longhelp.js  micropy.js  numworks.js  nws.css  nws.html  nws.js  nws_en.html  nws_sig.js  recovery  service-worker.js  shakeys  simple.html  tableau.js  tableauen.html  tableaufr.html  w3.css  xcas.js  xcasen.html  xcasfr.html
src/giac/examples/: Makefile.in
src/giac/micropython-1.12/: Makefile  (+2 more)
src/mpfi/: Makefile.in  aclocal.m4  configure
(+1322 files in other folders)
